# remotefs-rs-webdav

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-test.yml
src/: lib.rs  mock.rs  parser.rs
src/webdav_xml/: LICENSE-MIT  error.rs  mod.rs  read.rs  value.rs  write.rs
src/webdav_xml/elements/: href.rs  mod.rs  multistatus.rs  prop.rs  propfind.rs  propstat.rs  response.rs  responsedescription.rs  status.rs
src/webdav_xml/properties/: creationdate.rs  displayname.rs  getcontentlanguage.rs  getcontentlength.rs  getcontenttype.rs  getetag.rs  getlastmodified.rs  lockdiscovery.rs  mod.rs  resourcetype.rs  supportedlock.rs
tests/: docker-compose.yml
