[package]
name = "remotefs-webdav"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = "a remotefs client implementation for WebDAV"
homepage = "https://github.com/veeso/remotefs-rs-webdav"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-webdav"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
remotefs = "0.2"
rustydav = "0.1.3"
thiserror = "^1.0"
webdav-xml = "^0.1"

[dev-dependencies]
env_logger = "^0.11.0"
pretty_assertions = "^1.0.0"
serial_test = "^3"
tempfile = "^3.2.0"
uuid = { version = "^1", features = ["v4"] }

[features]
default = ["find"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]
# tests
github-actions = []
with-containers = []
