[package]
name = "remotefs-webdav"
version = "0.1.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = "a remotefs client implementation for WebDAV"
homepage = "https://github.com/veeso/remotefs-rs-webdav"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-webdav"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
log = "0.4"
remotefs = "0.2"
rustydav = "0.1.3"
thiserror = "^1.0"
#webdav-xml = "^0.1"
#webdav-xml = { git = "https://github.com/veeso/webdav-rs.git", package = "webdav-xml" }

# webdav-xml deps
bytestring = "1.3.1"
http = "1"
httpdate = "1.0.3"
indexmap = "2.2.3"
mime = "0.3.17"
nonempty = "0.9.0"
quick-xml = "0.31.0"
time = { version = "0.3.34", features = ["parsing", "formatting"] }


[dev-dependencies]
env_logger = "^0.11.0"
pretty_assertions = "^1.0.0"
serial_test = "^3"
uuid = { version = "^1", features = ["v4"] }

[features]
default = ["find"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]
# tests
github-actions = []
with-containers = []
